src/css/style.css
*{
    margin:0;
    padding:0;
    box-sizing: border-box;
}
:root {
    --mercury: #419EBB;
    --venus: #EDA249;
    --earth: #6D2ED5;
    --mars: #D14C32;
    --jupiter: #D83A34;
    --saturn: #CD5120;
    --uranus: #1EC1A2;
    --neptune: #2D68F0;
  }
body{
    font-family: 'Spartan';
    color: #fff;
    background-color: #070724;
    background-image: url('../assets/background-stars.svg');
}
header{
    display: flex;
    align-items: center;
    border-bottom:1px solid rgba(255, 255, 255, 0.2);
}
.header__title{
    font-family: 'Antonio';
    font-weight: 500;
    font-size: 28px;
    text-transform: uppercase;
    line-height: 100%;
}
.header__links{
    list-style: none;
    display: flex;
    font-size: 11px;
    line-height: 25px;
    letter-spacing: 1px;
    text-transform: uppercase;
    font-weight: 700;
}
.header__link{
    padding: 30px 0;
    margin: 0 15px;
    position: relative;
    cursor: pointer;
    }

.main{
    display:flex;
}
.main__details{
    display: flex;
}
.details__input{
    display: flex;
    flex-direction: column;

}
.details__input input {
    opacity: 0;
    width: 0;
    height: 0;
}
.detail__input:checked + .input__label{
    background-color: #419EBB;
}
.input__label{
    padding: 10px 25px;
    margin: 5px 0;
    display: flex;

    border: 1px solid rgba(255, 255, 255, 0.2);
    font-size: 12px;
    line-height: 25px;
    font-weight: bold;
    text-transform: uppercase;
    letter-spacing: 2.5px;
}
.detail__title{
    font-size: 80px;
    font-family: 'Antonio';
    text-transform: uppercase;
}
    .detail__desc{
    font-size: 14px;
    line-height: 25px;
    margin-top: 20px;
    }
    .details__input{
        margin-top:10px;
    }
.label__no{
    margin-right: 25px;
}
.image__spec{
    position: relative;
}
.image__tooltip{
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, 50%);
    width: 160px;
}
.footer__link{
    margin-left: auto;
    display: flex;
    flex-direction: column;
    border: 1px solid rgba(255, 255, 255, 0.2);
}
footer{
    margin-top: 100px;
    margin-bottom: 20px;
    
    width: 100%;
    
}
.footer__links{
    list-style: none;
    display: flex;
    justify-content: space-evenly;
}

.link__title{
    font-size: 11px;
    line-height: 25px;
    letter-spacing: 1px;
    text-transform: uppercase;
    color: #fff;
    opacity: 0.5;
}
.link__stat{
    font-size: 40px;
    line-height: 100%;
    text-transform: uppercase;
    font-family: 'Antonio';
}
@media screen and (min-width: 1200px) { 
    header{
        flex-direction: row;
        padding: 0 30px;
        justify-content: space-between;
    }
    .header__links{
        margin-left: auto;
    }
    .header__link:hover::before{
        content:'';
        position: absolute;
        top: 0;
        display: block;
        background-color: #fff;
        width: 100%;
        height: 2px;
        }
    .header__link:nth-child(1):hover::before {
        background-color: var(--mercury);
    }
    .header__link:nth-child(2):hover::before {
        background-color: var(--venus);
    }
    .header__link:nth-child(3):hover::before {
        background-color: var(--earth);
    }
    .header__link:nth-child(4):hover::before {
        background-color: var(--mars);
    }
    .header__link:nth-child(5):hover::before {
        background-color: var(--jupiter);
    }
    .header__link:nth-child(6):hover::before {
        background-color: var(--saturn);
    }
    .header__link:nth-child(7):hover::before {
        background-color: var(--uranus);
    }
    .header__link:nth-child(8):hover::before {
        background-color: var(--neptune);
    }
     
    
    
    .main{
        flex-direction: row;
        justify-content: space-between;
        padding: 0 85px;
    }
    .main__image{
        margin: auto;
    }
    .main__details{
    margin-left: auto;
    flex-direction: column;
    width: 30%;
    min-width: 350px;
    }
    footer{
        padding: 0 85px;
    }
    .footer__link{
        padding: 20px 90px 20px 15px;
    }

}

@media screen and (min-width: 700px) and (max-width: 1200px) { 
    header {
        flex-direction: column;
        padding: 40px;
    }
    .header__links{
        margin-top: 40px;
    }
    .main{
        justify-content: center;
        flex-direction: column;
        padding: 0 40px;
    }
    .main__image{
        margin: 100px auto;
    }
    .main__details{
        flex-direction: row;
        justify-content: space-evenly;
    }
    
    .details__text{
        padding-right: 10%;
        width:65%;
    }
    .details__input{
        flex: 1;
    }
    footer{
        padding: 0 40px;
    }
    .footer__link{
        
        padding: 20px 40px 20px 15px;
    }
}
@media screen and (max-width: 700px){
    
}

